--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <ul>
-              <li class="cart-item" v-for="item in cart">
+            <transition-group name="fade" tag="ul">
+              <li class="cart-item"
+                  v-for="item in cart"
+                  v-bind:key="item.id">
                 <div class="item-title">{{ item.title }}</div>
                 <span>{{ item.price | currency }} x {{ item.qty }}</span>
                 <button class="btn" @click="inc(item)">+</button>
                 <button class="btn" @click="dec(item)">_</button>
               </li>
-            </ul>
+            </transition-group>
             <transition name="fade">
               <div v-if="cart.length">
                 <div>Total : {{ total | currency }}</div>
