--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
               <button class="add-to-cart btn" @click="addItem(index)">Add to cart</button>
             </div>
           </div>
+          <div id="product-list-bottom">
+          </div>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
@@ -71,6 +73,7 @@
 <script src="/reload/reload.js"></script>
 <script src="node_modules/vue/dist/vue.js"></script>
 <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+<script src="node_modules/scrollmonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
