fixing search result

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="main">
         <div class="products">
           <div class="search-result" v-if="!loading">
-            <p>Found <strong>{{ items.length }}</strong> resulst for search term <strong>{{lastSearch}}</strong>.</p>
+            <p>Found <strong>{{ results.length }}</strong> resulst for search term <strong>{{lastSearch}}</strong>.</p>
           </div>
           <div class="search-result" v-else>
             <p>Loading...</p>
