show no more items when scrolling at the bottom & displaying all items

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             </div>
           </div>
           <div id="product-list-bottom">
+            <div v-if="items.length === results.length && results.length > 0">
+              No more Items.
+            </div>
           </div>
         </div>
         <div class="cart">
